[package]
name        = "error_land"
description = "foray in the error landscape of Rust"
authors     = [ "decatur.de" ]
edition = "2021"
publish     = false

[dependencies]

# crates.io dependencies
anyhow             = { version = "1.0", features = [ "backtrace" ] }
thiserror          = { version = "1.0" }
serde_json         = "1"
snafu              = "0.8.5"
tracing            = { version = "0.1", default-features = false }
tz-rs = "0.7.0"

[dependencies.tracing-subscriber]
version = "0.3"
default-features = false
features = [ "fmt", "registry" ]



